crates/cli/tests/snapshots/cli__edit__done_with_a_final_note.snap
---
source: crates/cli/tests/cli.rs
expression: support_file(&env)
---
# [x] Answer the support ticket

## Description

Customer asks about the export format.

## Tags

#support #B

## Progress

- 2026-10-02 10:00: created via tasks create
- 2026-10-07 09:30: answered
